--- a/wp-seiten/facceten.html
+++ b/wp-seiten/facceten.html
@@ -21,13 +21,17 @@
         </div>
     </div>
 </div>
-<div class="material-suche" style="float: left; width: 70%;">
-    [facetwp facet="suche"]
-</div>
 <div class="material-resultcontainer">
+    <div class="material-suche">
+        [facetwp facet="suche"]
+    </div>
+    <div class="clear"></div>
     <div class="material-selection">[facetwp selections="true"]</div>
-    <div class="material-counter">[facetwp counts="true"]</div>
-    <div class="material-pager">[facetwp pager="true"]</div>
+    <div>
+        <div class="material-counter">[facetwp counts="true"] Treffer</div>
+        <div class="material-pager">[facetwp pager="true"]</div>
+    </div>
+    <div class="clear"></div>
     <div class="material-results">[facetwp template="example"]</div>
     <div class="material-pager">[facetwp pager="true"]</div>
 </div>
